k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cexp-svc
spec:
  selector:
    app.kubernetes.io/name: cexp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
