k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cexp-ingress
  namespace: cexp

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /exp
            pathType: Prefix
            backend:
              service:
                name: cexp-svc
                port:
                  number: 80
